# WGCapture

./: .gitignore  LICENSE  MANIFEST.in  README.md  capture.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci-build-testpypi.yml
cpp_backend/wgc_core/: wgc_api.cpp  wgc_api.h  wgc_capture.cpp  wgc_capture.h  wgc_core.sln  wgc_core.vcxproj  wgc_core.vcxproj.filters  wgc_interop.h
wgcapture/: __init__.py  __main__.py  core.py
wgcapture.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
