[metadata]
name = wgcapture
version = 0.1.0
description = "Simple window specific sreengrab using Windows Graphics Capture"
long_description = file: README.md
long_description_content_type = text/markdown
author = Zongyu Carnes
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    numpy
    Pillow
    pygetwindow

include_package_data = True

[options.package_data]
wgcapture = dlls/*.dll